--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dialogflow": "^0.5.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "pg": "7.8.0",
     "request": "^2.87.0",
