--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@line/bot-sdk": "^6.4.0",
     "body-parser": "^1.18.3",
     "dialogflow": "^0.5.0",
     "ejs": "^2.6.1",
